# CPP

CPP1_s21_matrixplus/: Makefile  s21_matrix_oop.cc  s21_matrix_oop.h
CPP1_s21_matrixplus/tests/: test.cc  test.h  test_calc_complements.cc  test_constructors.cc  test_determinant.cc  test_eq_matrix.cc  test_inverse_matrix.cc  test_mul_matrix.cc  test_mul_number.cc  test_sub_matrix.cc  test_sum_matrix.cc  test_transpose.cc
Kaspersky tech task/src/: main.cc  scanner.cc  scanner.h
Kaspersky_tech_task/: CMakeLists.txt
Kaspersky_tech_task/src/: hash_table.csv
Kaspersky_tech_task/src/tests/: test.cc
